--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>Last IMPERIAL Dance</h1>
+                    <h1>
+                        <a href="#top">
+                            <img src="./images/LOGO.png" alt="Logo time IMPERIAL">
+                        </a>
+                    </h1>
                 </div>
                 <div class="col">
                     <ul class="nav justify-content-end">
                         <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#produtos">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#players">Jogadores</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contatos">Contato</a></li>
                     </ul>
                 </div>
@@ -44,44 +48,75 @@
                     <a class="btn btn-lg btn-success">Botão</a>
                 </div>
                 <div class="col-md-5 col-sm-12">
-                    <img src="./images/pexels-josh-sorenson-1714208.jpg" alt="Imagem Exemplo" class="img-fluid">
+                    <img src="./images/IMPERIAL_TEAM.jfif" alt="Imagem Exemplo" class="img-fluid">
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="produtos">
+    <section id="players">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>JOGADORES</h2>
+                    <div class="card">
+                        <img src="./images/FNX.jpg" alt="Image of CS:GO player fnx" class="img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Lincoln "fnx" Lau</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-1" >Informações</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./images/FALLEN.jpg" alt="Image of CS:GO player fallen" class="img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Gabriel "FalleN" Toledo</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-2" >Informações</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="./images/FER.jpg" alt="Image of CS:GO player fer" class="img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Fernando "fer" Alvarenga</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-3" >Informações</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
 
         <div class="container">
             <div class="row">
                 <div class="col">
-
-                    <h2>Produtos</h2>
-
                     <div class="card">
-                        <img src="./images/pexels-josh-sorenson-1714208.jpg" alt="Imagem Exemplo" class="img-fluid">
+                        <img src="./images/BOLTZ.jpg" alt="Image of CS:GO player boltz" class="img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem ipsum dolor</h5>
+                            <h5 class="card-title">Ricardo "boltz" Prass</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
-                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-1" >ver produto</a>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-4" >Informações</a>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="./images/pexels-josh-sorenson-1714208.jpg" alt="Imagem Exemplo" class="img-fluid">
+                        <img src="./images/VINI.jpg" alt="Image of CS:GO player vini" class="img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem ipsum dolor</h5>
+                            <h5 class="card-title">Vinicius "VINI" Figueiredo</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
-                            <a class="btn btn-primary" href="#produto-2">ver produto</a>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-5" >Informações</a>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="./images/pexels-josh-sorenson-1714208.jpg" alt="Imagem Exemplo" class="img-fluid">
+                        <img src="./images/PEACEMAKER.jpg" alt="Image of CS:GO player peacemaker" class="img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem ipsum dolor</h5>
+                            <h5 class="card-title">Luis "Peacemaker" Tadeu</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
-                            <a class="btn btn-primary" href="#produto-3">ver produto</a>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-6" >Informações</a>
                         </div>
                     </div>
                     
@@ -126,41 +161,108 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Produto 1</h5>
+                    <h5 class="modal-title">Lincoln "fnx" Lau</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h6>Confira o tamanho e os preços</h6>
-                    <table class="table table-hover table-striped">
-                        <thead>
-                            <tr>
-                                <th>Tamanho</th>
-                                <th>Valor</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>P</td>
-                                <td>R$ 100</td>
-                            </tr>
-                            <tr>
-                                <td>M</td>
-                                <td>R$ 200</td>
-                            </tr>
-                            <tr>
-                                <td>G</td>
-                                <td>R$ 300</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <h6>Historia</h6>
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="modal fade" id="modal-2">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Gabriel "FalleN" Toledo</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Historia</h6>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modal-3">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Fernando "fer" Alvarenga</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Historia</h6>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modal-4">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Ricardo "boltz" Prass</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Historia</h6>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modal-5">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Vinicius "VINI" Figueiredo</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Historia</h6>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modal-6">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Luis "Peacemaker" Tadeu</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Historia</h6>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
