--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
                             <div class="accordion-body">
-                                <p>Nascido na cidade de São Paulo em janeiro de 1990, fnx começou no Counter-Strike aos 11 anos de idade e logo se destacou no cenário nacional e internacional do FPS.</p>
+                                <p>Nascido na cidade de São Paulo em janeiro de 1990, fnx começou no Counter-Strike aos 11 anos de idade e logo se destacou no cenário nacional e internacional do FPS.
+                                <br>
+                                <br>
+                                Vulgo: Lincoln “FNX” Lau, 1.82 de altura , 30 Anos de idade, Mestiço, Chinês, 22 Na régua.                              
+                                </p>
                             </div>
                           </div>
                         </div>
@@ -182,7 +186,71 @@
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
                             <div class="accordion-body">
-                              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                              <ol class="list-group list-group-numbered">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Mundial</div>
+                                     ESWC 2006, MLG Major Championship: Columbus 2016, MLG Major Championship: Columbus 2016	...
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">6</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Panamericano</div>
+                                     Campeonatos panamericanos diversos.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">5</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">BBB</div>
+                                     Big Brother Brasil as melhores edições, líder em todas semanas, 0 paredões.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">4</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Banheira do Gugu</div>
+                                     Banheiras do Gugu no auge.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">3</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Soletrando</div>
+                                      Soletrando no Luciano Hulk e um na Russia.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">2</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Fazenda</div>
+                                      A Fazenda as melhores edições, tratou os animais muito bem.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">3</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Pelados em floripa</div>
+                                     Entrou armado no programa todas as vezes.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">3</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">DNA do ratinho</div>
+                                     Foi algumas vezes questionado sobre sua fertilidade.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">7</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                  <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Suíte Master</div>
+                                      Chamado para a suíte master 4 vezes no programa De Ferias com EX.
+                                  </div>
+                                  <span class="badge bg-primary rounded-pill">4</span>
+                                </li>
+                              </ol>
                             </div>
                           </div>
                         </div>
@@ -194,12 +262,24 @@
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                              <ol class="list-group list-group-numbered">
+                                <li class="list-group-item">Kabum.TD</li>
+                                <li class="list-group-item">Games Academy</li>
+                                <li class="list-group-item">Luminosity</li>
+                                <li class="list-group-item">SK Gaming</li>
+                                <li class="list-group-item">Immortals</li>
+                                <li class="list-group-item">Não Tem Como</li>
+                                <li class="list-group-item">RED Canids</li>
+                                <li class="list-group-item">Imperial</li>
+                                <li class="list-group-item">Páqueta</li>
+                                <li class="list-group-item"><span class="green">
+                                  LAST DANCE Imperial
+                                </span></li>
+                              </ol>
                             </div>
                           </div>
                         </div>
-                    </div>
-                       
+                    </div>   
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
