feat: melhorar seção hero desktop

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
 
     <div id="hero">
-
         <div class="texture d-block d-sm-none"></div>
 
         <video loop muted autoplay preload="auto" class="d-none d-sm-block">
@@ -29,11 +28,11 @@
             Seu browser não suporta a tag video.
         </video>
 
-        <div class="hero__content fixed-top">
+        <div class="hero__content fixed-top d-block d-sm-none">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img src="./images/LOGO1.png" alt="">
+                        <img class="logo__black"src="./images/LOGO1.png" alt="">
                     </div>
                     <div class="col">
                         <div class="dropdown">
@@ -51,6 +50,57 @@
             </div>
         </div>
 
+        <div class="hero__content d-none d-sm-block">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <img class="logo__white"src="./images/LOGO1-white.png" alt="Logo Imperial">
+                <div class="hero__contentDesktop">
+                  <h1 >Uma antiga crença popular conta que o cisne, ao pressentir a chegada da morte, deixaria de ser mudo para entoar uma maravilhosa canção de despedida.</h1>
+                  <a href="#team">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                      viewBox="0 0 330 330" style="enable-background:new 0 0 330 330;" xml:space="preserve">
+                    <path id="XMLID_225_" d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393
+                      c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393
+                      s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"/>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 
     <section id="team">
@@ -142,7 +192,7 @@
                         <img src="./images/FELIPPE1.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">felippe1</h3>
-                            <p class="card-text">Felippe "felippe1" Martins, CEO Imperial.</p>
+                            <p class="card-text">Felippe "felippe1" Martins, CEO Imperial e sonhador.</p>
                             <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-6" >Informações</a>
                         </div>
                     </div>
@@ -305,7 +355,8 @@
                           </h2>
                           <div id="collapseOne2" class="accordion-collapse collapse show" aria-labelledby="headingOne">
                             <div class="accordion-body">
-                                <p>Gabriel Toledo de Alcântara Sguario, mais conhecido como FalleN, nasceu em Itararé no dia 30 de maio de 1991, é um empresário e jogador profissional CS:GO. Em 2015 ele foi nomeado como a pessoa mais influente no Esports brasileiro. Ele também é investidor da organização brasileira de Esports Games Academy, Gamers Club, FalleN Store e YeaH! Gaming.
+                                <p>Gabriel Toledo de Alcântara Sguario, mais conhecido como FalleN, nasceu em Itararé no dia 30 de maio de 1991, é um empresário e jogador profissional CS:GO. Em 2015 ele foi nomeado como a pessoa mais influente no Esports brasileiro. Ele também é investidor da organização brasileira de Esports Games Academy, Gamers Club, <a href="https://www.fallenstore.com.br" target="_blank" rel="noopener noreferrer">
+                                  Fallen Store</a> e YeaH! Gaming.
                                 <br>
                                 <br>
                                 Vulgo: Professor.
