style: modificar cards

--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
   </header>
 
     <div id="hero">
-        <div class="texture d-block d-sm-none"></div>
-
-        <video loop muted autoplay preload="auto" class="d-none d-sm-block">
+        <video loop muted autoplay preload="auto" class="">
             <source src="./hero/hero-video.webm" type="video/webm">
             Seu browser não suporta a tag video.
         </video>
 
-        <div class="hero__content d-none d-sm-block">
+        <div class="hero__content">
           <div class="container">
             <div class="row">
               <div class="col">
@@ -109,7 +107,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/FNX.jpg" alt="Image of CS:GO player fnx" class="img-fluid">
+                        <img src="./images/FNX2.jpg" alt="Image of CS:GO player fnx" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">fnx</h3>
                             <p class="card-text">Lincoln "fnx" Lau, jogador profissional de CS:GO. #CupomFNX</p>
@@ -122,7 +120,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/FALLEN.jpg" alt="Image of CS:GO player fallen" class="img-fluid">
+                        <img src="./images/FALLEN2.jpg" alt="Image of CS:GO player fallen" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">FalleN</h3>
                             <p class="card-text">Gabriel "FalleN" Toledo, jogador profissional de CS:GO.</p>
@@ -135,7 +133,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/FER.jpg" alt="Image of CS:GO player fer" class="img-fluid">
+                        <img src="./images/FER2.jpg" alt="Image of CS:GO player fer" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">fer</h3>
                             <p class="card-text">Fernando "fer" Alvarenga, jogador profissional de CS:GO.</p>
@@ -148,7 +146,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/BOLTZ.jpg" alt="Image of CS:GO player boltz" class="img-fluid">
+                        <img src="./images/BOLTZ2.jpg" alt="Image of CS:GO player boltz" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">boltz</h3>
                             <p class="card-text">Ricardo "boltz" Prass, jogador profissional de CS:GO.</p>
@@ -161,7 +159,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/VINI.jpg" alt="Image of CS:GO player vini" class="img-fluid">
+                        <img src="./images/VINI2.jpg" alt="Image of CS:GO player vini" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">VINI</h3>
                             <p class="card-text">Vinicius "VINI" Figueiredo, jogador profissional de CS:GO.</p>
@@ -174,7 +172,7 @@
                 <div class="col-md-4 col-sm-12">
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/PEACEMAKER.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
+                        <img src="./images/PEACEMAKER2.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">Peacemaker</h3>
                             <p class="card-text">Luis "Peacemaker" Tadeu, treinador profissional de CS:GO.</p>
@@ -188,7 +186,7 @@
                   <h2 class="text-uppercase">Menção honrosa</h2>
                   <div class="d-flex justify-content-center">
                     <div class="card">
-                        <img src="./images/FELIPPE1.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
+                        <img src="./images/FELIPPE12.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
                         <div class="card-body">
                             <h3 class="card-title">felippe1</h3>
                             <p class="card-text">Felippe "felippe1" Martins, CEO Imperial e sonhador.</p>
@@ -896,7 +894,6 @@
                         <blockquote class="twitter-tweet" data-lang="pt" data-dnt="true" data-theme="dark" align="center"><p lang="pt" dir="ltr">Este é nosso! Parabéns comunidade Brasileira.. <br>Isso só é possível por que somos JUNTOS!<br>Obrigado <a href="https://t.co/KWVQMAcAhW">pic.twitter.com/KWVQMAcAhW</a></p>&mdash; Gaules (@Gaules) <a href="https://twitter.com/Gaules/status/1526332775250513923?ref_src=twsrc%5Etfw">16 de maio de 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     
                         <p class="text-md-center">707mil pessoas simultâneas se tornando a maior live de um influenciador/streamer da história do Brasil!
-                          <br>
                           <br>
                             A comunidade internacional pediu um major no Brasil, porque agora eles estão começando a entender.
                         </p>
