--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last IMPERIAL Dance</title>
+    
 
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/custom.css">
@@ -17,6 +17,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <title>Last IMPERIAL Dance</title>
+    <meta name="title" content="The Last IMPERIAL Dance">
+    <meta name="description" content="Last Dance CS:GO, lendas se juntam em busca de dominar o mundo outra vez.
+    Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lucasfelipe-s.github.io/bootstrap/">
+    <meta property="og:title" content="The Last IMPERIAL Dance">
+    <meta property="og:description" content="Last Dance CS:GO, lendas se juntam em busca de dominar o mundo outra vez.
+    Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
+    <meta property="og:image" content="https://instagram.fcgh3-1.fna.fbcdn.net/v/t51.2885-15/274164881_981063122827796_6116437714842936214_n.jpg?stp=dst-jpg_e35&_nc_ht=instagram.fcgh3-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=bOF1kAMpk28AX_mbIUx&tn=cdZY6WvawR6K5E4q&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjc3NjcyMTM3NjAwODQxNTIxNQ%3D%3D.2-ccb7-5&oh=00_AT8uves0gRscaY1ape3hGaEsseZFXqQDuJdUQbWSt2b5qA&oe=629469D6&_nc_sid=30a2ef">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://lucasfelipe-s.github.io/bootstrap/">
+    <meta property="twitter:title" content="The Last IMPERIAL Dance">
+    <meta property="twitter:description" content="Last Dance CS:GO, lendas se juntam em busca de dominar o mundo outra vez.
+    Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
+    <meta property="twitter:image" content="https://instagram.fcgh3-1.fna.fbcdn.net/v/t51.2885-15/274164881_981063122827796_6116437714842936214_n.jpg?stp=dst-jpg_e35&_nc_ht=instagram.fcgh3-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=bOF1kAMpk28AX_mbIUx&tn=cdZY6WvawR6K5E4q&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjc3NjcyMTM3NjAwODQxNTIxNQ%3D%3D.2-ccb7-5&oh=00_AT8uves0gRscaY1ape3hGaEsseZFXqQDuJdUQbWSt2b5qA&oe=629469D6&_nc_sid=30a2ef">
 </head>
 <body>
 
@@ -954,7 +973,7 @@
 
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2020 Copyright:
-            <a class="text-white" href="https://www.github.com/lucasfelipe-s">Lucas</a>
+            <a class="text-white" href="https://www.github.com/lucasfelipe-s" target="_blank" rel="noopener noreferrer">Lucas</a>
           </div>
         </footer>
       </section>
