feat; austar secao sobre

--- a/index.html
+++ b/index.html
@@ -590,7 +590,9 @@
                 </h2>
                 <div id="collapseOne4" class="accordion-collapse collapse show" aria-labelledby="headingOne4">
                   <div class="accordion-body">
-                      <p>Ricardo "boltz" Prass, nasceu no dia 10 de Abril de 1997, é um jogador profissional de CS:GO, onde foi vice-campeão do Major pela Immortals e empresário brasileiro. CEO da <a href="https://twitter.com/proskinsgg" target="_blank" rel="noopener noreferrer">@proskinsgg</a>.</p>       
+                      <p>Ricardo "boltz" Prass, nasceu no dia 10 de Abril de 1997, é um jogador profissional de CS:GO, onde foi vice-campeão do Major pela Immortals e empresário brasileiro. CEO da <a href="https://twitter.com/proskinsgg" target="_blank" rel="noopener noreferrer">@proskinsgg</a>.
+                      <br>
+                      Vulgo: Boltalha Spray bom.</p>       
                   </div>
                 </div>
               </div>
@@ -871,19 +873,15 @@
   <section id="about">
     <div class="container about__header">
       <div class="row">
-        <div class="col-md-7 col-sm-12">
+        <div class="col">
           <h2 class="text-uppercase">Sobre nós</h2>
-          <p>O projeto <span class="green">The Last Dance</span>, começou oficialmente no dia 18 de fevereiro de 2022. Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports, a torcida pediu e o sonho virou realidade.
-          <br>
-          A Última Dança começou e será inesquecível! Venha fazer parte!</p>
-          
-          <h3 class="text-uppercase text-start">Vlogs imperiais</h3>
-          <div class="playlist__embed text-start">
+          <p>O projeto <span class="green">The Last Dance</span>, começou oficialmente no dia 18 de fevereiro de 2022. Lendas se juntam em busca de dominar o mundo outra vez. Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports.
+          </p>
+          <p class="text-center">A Última Dança começou e será inesquecível! Venha fazer parte!</p> 
+          <h3 class="text-uppercase">Vlogs imperiais</h3>
+          <div class="playlist__embed">
               <iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=PLCq71BKJmII9uqnv_f8LFTNgFGwiLzYZ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-        <div class="col-md-5 col-sm-12">
-            <img src="./images/IMPERIAL_TEAM.jfif" alt="Imagem Exemplo" class="img-fluid">
+          </div>    
         </div>
       </div>
     </div>
@@ -923,7 +921,7 @@
             <p class="text-md-center">707mil pessoas simultâneas se tornando a maior live de um influenciador/streamer da história do Brasil!</p>
 
             <h3 class="text-uppercase">Major no brasil</h3>
-            <p class="text-md-center">A comunidade pediu um major no Brasil, porque agora eles estão começando a entender.</p>
+            <p class="text-md-center">A comunidade pediu um major no Brasil, porque agora eles estão começando a entender. #OMajorÉNosso 🇧🇷</p>
                 
             <div class="row d-flex justify-content-center align-items-center">
               <div class="d-none d-sm-none d-md-block">
