feat: adicionar card ferrer/imp e remover scroll reveal bugando

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid container">
 
       <a class="navbar-brand" href="#top">
-        <img src="./images/LOGO1.png" alt="">
+        <img src="./images/LOGO1.png" alt="Logo do time imperial esports">
       </a>
       <ul class="nav">
         <li class="nav-item">
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col">
 
-            <img class="logo__white"src="./images/LOGO1-white.png" alt="Logo Imperial">
+            <img class="logo__white"src="./images/LOGO1-white.png" alt="Logo do time imperial esports">
 
             <div class="hero__contentDesktop">
 
@@ -293,19 +293,49 @@
             </div>
           </div>
 
-          <div class="col-md-12">
-            <h2 class="text-uppercase">Menção honrosa</h2>
-            <div class="d-flex justify-content-center">
-              <div class="card">
+          <h2 class="text-uppercase">Menções honrosas</h2>
 
-                  <img src="./images/FELIPPE12.jpg" alt="Image of CS:GO coach peacemaker" class="img-fluid">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <div class="d-flex justify-content-center">
+
+              <div class="card">
+                  <img src="./images/FELIPPE12.jpg" alt="Image of CEO Imperial Felippeone" class="img-fluid">
                   <div class="card-body">
                       <h3 class="card-title">felippe1</h3>
                       <p class="card-text">Felippe "felippe1" Martins, CEO Imperial e sonhador.</p>
                       <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-7" >Informações</a>
                   </div>
-
               </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 d-none d-lg-block">
+            <div class="d-flex justify-content-center">
+
+              <div class="card">
+                <img src="./images/IMPERIAL2.jpg" alt="Image of CS:GO team Imperial" class="img-fluid">
+                <div class="card-body">
+                    <h3 class="card-title">Imperial</h3>
+                    <p class="card-text">A Imperial eSports é uma equipe profissional que atua competitivamente no ramo de eSports e com foco na performance.</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <div class="d-flex justify-content-center">
+
+              <div class="card">
+                <img src="./images/FERRER2.jpg" alt="Image of CS:GO manager ferrer" class="img-fluid">
+                <div class="card-body">
+                    <h3 class="card-title">Ferrer</h3>
+                    <p class="card-text">Cleber "Ferrer" Ferreira, Manager da Imperial.</p>
+                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-8" >Informações</a>
+                </div>
+              </div>
+
             </div>
           </div>
 
@@ -943,9 +973,42 @@
     </div>
   </div>
 
+  <div class="modal fade" id="modal-8">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h3 class="modal-title">Cleber "Ferrer" Ferreira</h3>
+            <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="accordion" id="accordionExample8">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne8">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne8" aria-expanded="true" aria-controls="collapseOne8">
+                      <h2>Historia</h2>
+                  </button>
+                </h2>
+                <div id="collapseOne8" class="accordion-collapse collapse show" aria-labelledby="headingOne8">
+                  <div class="accordion-body">
+                    <p>Cleber "Ferrer" Ferreira, nasceu em Botucatu-SP é um ex-treinador profissional de CS, que atualmente é o manager da Imperial Esports e apaixonado por pesca. Você pode conferir mais alguns detalhes sobre ele no <a href="https://www.youtube.com/watch?v=gfWfEkQIUPs" target="_blank" rel="noopener noreferrer">Torresmocast</a>, um podcast que ele participou e contou um pouco sobre sua vida.
+                    <br>
+                    <br>
+                    Vulgo: Ferrero Roche.</p>             
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
   <section id="footer">
     <footer class="text-center">
-      <img src="./images/LOGO1.png" alt="">
+      <img src="./images/LOGO1.png" alt="Logo do time imperial esports">
       <div>
         <a href="https://twitter.com/imperialesports" target="_blank" rel="noopener noreferrer">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>
@@ -984,7 +1047,6 @@
     </footer>
   </section>
 
-  <script src="https://unpkg.com/scrollreveal"></script>
   <script src="./script.js"></script>
   <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 
