--- a/index.html
+++ b/index.html
@@ -440,6 +440,13 @@
                       </div>
                       <span class="badge bg-primary rounded-pill">4</span>
                     </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                      <div class="ms-2 me-auto">
+                        <div class="fw-bold">Troféu políglota</div>
+                          Primeiro participante a ganhar um troféu no programa De Ferias com EX.
+                      </div>
+                      <span class="badge bg-primary rounded-pill">1</span>
+                    </li>
                   </ol>
                 </div>
               </div>
