refactor: ajustar meta tags

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lucasfelipe-s.github.io/bootstrap/">
+    <meta property="og:url" content="https://lastimperialdance.netlify.app">
     <meta property="og:title" content="The Last IMPERIAL Dance">
     <meta property="og:description" content="Last Dance CS:GO, lendas se juntam em busca de dominar o mundo outra vez.
     Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
-    <meta property="og:image" content="https://instagram.fcgh3-1.fna.fbcdn.net/v/t51.2885-15/274164881_981063122827796_6116437714842936214_n.jpg?stp=dst-jpg_e35&_nc_ht=instagram.fcgh3-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=bOF1kAMpk28AX_mbIUx&tn=cdZY6WvawR6K5E4q&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjc3NjcyMTM3NjAwODQxNTIxNQ%3D%3D.2-ccb7-5&oh=00_AT8uves0gRscaY1ape3hGaEsseZFXqQDuJdUQbWSt2b5qA&oe=629469D6&_nc_sid=30a2ef">
+    <meta property="og:image" content="./images/meta-image.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://lucasfelipe-s.github.io/bootstrap/">
+    <meta property="twitter:url" content="https://lastimperialdance.netlify.app">
     <meta property="twitter:title" content="The Last IMPERIAL Dance">
     <meta property="twitter:description" content="Last Dance CS:GO, lendas se juntam em busca de dominar o mundo outra vez.
     Uma equipe com jogadores bicampeões de CS:GO vestindo o manto da Imperial Esports. A Última Dança começou e será inesquecível! Venha fazer parte!">
-    <meta property="twitter:image" content="https://instagram.fcgh3-1.fna.fbcdn.net/v/t51.2885-15/274164881_981063122827796_6116437714842936214_n.jpg?stp=dst-jpg_e35&_nc_ht=instagram.fcgh3-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=bOF1kAMpk28AX_mbIUx&tn=cdZY6WvawR6K5E4q&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjc3NjcyMTM3NjAwODQxNTIxNQ%3D%3D.2-ccb7-5&oh=00_AT8uves0gRscaY1ape3hGaEsseZFXqQDuJdUQbWSt2b5qA&oe=629469D6&_nc_sid=30a2ef">
+    <meta property="twitter:image" content="./images/meta-image.png">
 </head>
 <body>
 
